# tryProject

./: BinaryExpression.cpp  BinaryExpression.h  CMakeLists.txt  Command.h  DataReaderServer.cpp  DataReaderServer.h  Div.cpp  Div.h  Expression.h  Minus.cpp  Minus.h  Mul.cpp  Mul.h  Negative.cpp  Negative.h  Number.cpp  Number.h  OpenServerCommand.cpp  OpenServerCommand.h  Plus.cpp  Plus.h  UnaryExpression.cpp  UnaryExpression.h  main.cpp
